test/compiler_errors/bad-attribute-name.lzx
<!-- declaring an attribute with an illegal name throws error-->
<canvas width="300" height="200" bgcolor="red"> 

  <view>
    <attribute name="" value="259"/>
    <attribute name="123" value="259"/>
  </view>

</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
